# ai-survival-field

./: .gitignore  README.md  pyproject.toml
asf/: __init__.py  cli.py  demo.py  dogfood.py  full_loop.py  runtime.py
docs/: adapter_dry_run.md  adapter_event_model.md  adapter_safety.md  architecture.md  authorization_receipts.md  bounded_repair_execution.md  bounded_self_healing.md  capability_tokens.md  controlled_enforcement_gate.md  controlled_wound_closure.md  decision_replay.md  dogfood.md  enforce_block_only.md  enforcement_report.md  evolution_readiness_gate.md  examples_walkthrough.md  forward_progress_governor.md  geometry_console.md  github_actions_guard.md  governance_debt.md  install.md  invariant_registry.md  latest_pointer_alignment.md  non_claim_lock.md  operator_doctor.md  origin_statement.md  policy_diff.md  production_maturity.md  public_demo.md  quickstart.md  rehydration_findings.md  remote_ci_evidence.md  repair_authorization.md  repair_dry_run_boundary.md  repair_evidence.md  repair_planner.md  repair_validation.md  repair_validation_replay.md  repository_hygiene.md  runtime_alignment_auditor.md  (+5 more)
policies/: default.yaml  lenient_release.json  strict.json
schemas/: asf_adapter_event.schema.json  asf_artifact.schema.json  asf_authorization_receipt.schema.json  asf_block_enforcement.schema.json  asf_bounded_repair_execution.schema.json  asf_capability_token.schema.json  asf_ci_evidence.schema.json  asf_decision.schema.json  asf_dogfood_report.schema.json  asf_enforcement_report.schema.json  asf_evolution_readiness.schema.json  asf_wound.schema.json  (+18 more)
(+127 files in other folders)
