[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-survival-field"
version = "0.3.0"
description = "Governed runtime for preventing invalid AI artifacts from compounding into durable state."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "James Paul Jackson" }]

[project.scripts]
asf = "asf.cli:main"

[tool.setuptools.packages.find]
include = ["asf*"]
